# final4_bot2

./: .gitignore
final4/: .env  .env.example  CLAUDE.md  SPEC_TEMPLATE.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py
final4/.claude/agents/: core-engineer.md  database-architect.md  platform-adapter.md  qa-reviewer.md
final4/.claude/rules/: core-rules.md  infrastructure-rules.md  platforms-rules.md
final4/.claude/skills/: create-migration.md  debug-issue.md  implement-feature.md
final4/docs/: 00_architecture_overview.md  01_core_module.md  02_infrastructure_module.md  03_telegram_adapter.md  04_vk_adapter.md  05_discord_adapter.md  08_edge_cases.md  BUGS_FOUND.md  SETUP.md
final4/scripts/: init_db.sql  run_admin.py  run_bot.py  simulate_match.py
final4/src/admin/: app.py  models.py
final4/src/application/: __init__.py
final4/src/application/services/: __init__.py  match_service.py  user_service.py
final4/src/core/: __init__.py
final4/src/core/ai/: __init__.py  bot_ai.py
final4/src/core/engine/: __init__.py  action_calculator.py  bet_tracker.py  game_engine.py  score_calculator.py  whistle_deck.py
final4/src/core/interfaces/: __init__.py  repositories.py
final4/src/core/models/: __init__.py  bet.py  match.py  match_history.py  player.py  team.py  user.py  whistle_card.py
final4/src/infrastructure/cache/: rate_limiter.py  redis_client.py  session_cache.py
final4/src/infrastructure/db/: __init__.py  (+2 more)
final4/tests/integration/: test_db_integration.py  test_match_serialization.py  test_rating_elo.py
(+27 files in other folders)
